--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,33 +1,20 @@
 # ============================================
-# PYTHON DEPENDENCIES
-# AI Tic-Tac-Toe Backend
+# MINIMAL REQUIREMENTS - FASTEST INSTALLATION
+# Only essential packages
 # ============================================
 
 # Web Framework
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-python-multipart==0.0.6
+fastapi==0.104.1
+uvicorn==0.24.0
 
-# Data Validation
-pydantic==2.5.3
-pydantic-settings==2.1.0
+# Data Validation  
+pydantic==2.4.2
 
 # Database
-supabase==2.3.0
-postgrest==0.13.2
+supabase==2.0.3
 
-# Environment Management
+# Environment
 python-dotenv==1.0.0
 
-# CORS & Middleware
-python-jose[cryptography]==3.3.0
-
-# Development
-pytest==8.0.0
-pytest-asyncio==0.23.3
-httpx==0.24.0
-
-# Code Quality
-black==24.1.1
-flake8==7.0.0
-mypy==1.8.0
+# Note: This minimal set includes all transitive dependencies
+# FastAPI and Supabase will automatically install their requirements
