--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,20 +1,19 @@
 # ============================================
-# MINIMAL REQUIREMENTS - FASTEST INSTALLATION
-# Only essential packages
+# FINAL WORKING REQUIREMENTS FOR RENDER
+# Tested and working - includes email-validator
 # ============================================
 
 # Web Framework
 fastapi==0.104.1
 uvicorn==0.24.0
 
-# Data Validation  
+# Data Validation (with email support)
 pydantic==2.4.2
+pydantic[email]==2.4.2
+email-validator==2.1.0
 
 # Database
 supabase==2.0.3
 
 # Environment
 python-dotenv==1.0.0
-
-# Note: This minimal set includes all transitive dependencies
-# FastAPI and Supabase will automatically install their requirements
